<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/IV_shopping_item"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/legens" />

        </LinearLayout>

        <TextView
            android:id="@+id/TV_name_shopping_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_shopping_item"
            android:textColor="@color/colorBT"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_razmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/item_size"
                android:textColor="@color/colorBT"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/TV_size_shopping_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/text_item_size"
                android:textColor="@color/colorBT"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_cena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/price"
                android:textColor="@color/colorBT"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/TV_price_shopping_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/text_price"
                android:textColor="@color/colorBT"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>